# windows-automation-agent

./: .gitignore  CLAUDE.md  agent.py  feedback2.md  main.py  main_agent.py  memory.md  pyproject.toml  requirements.txt
core/: __init__.py  agent.py  brain.py  constants.py  context.py  prompt_builder.py  protocols.py  registry.py  router.py  tool_decorator.py
docs/: SOLID_REVIEW_AND_IMPLEMENTATION_PLAN.md  alternate implementation.md  feedback.md  feedback3.md
llm/: __init__.py  groq_adapter.py  mock_adapter.py
scripts/: groq_agent.py  list_devices.py  reliable_voice_agent.py  voice_agent.py  voice_tools_config.py
tests/: test_hardware_tools.py  test_system_tools.py  test_windows_tools.py
tools/: hardware_tools.py  system_tools.py  tool_specs.py  windows_tools.py
