[project]
name = "windows-automation-agent"
version = "0.2.0"
description = "Windows Automation Agent with Brain/Body/Orchestrator Architecture"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv",
    "groq",
    "screen-brightness-control",
    "pywinctl",
    "pyvda",
    "psutil",
    "wmi",
    "pyperclip",
    "pyautogui",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
voice = [
    "pipecat-ai[google,silero]",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main_agent", "agent", "groq_agent", "list_devices"]
packages = ["tools", "tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
